--- a/src/App.css
+++ b/src/App.css
@@ -34,18 +34,19 @@
 }
 
 .left-panel {
-  flex: 1;
+  flex: 0 0 300px;
   background-color: #2F3645;
   border-radius: 10px;
-  padding: 12px;
-  overflow-y: auto;
+  padding: 2px;
+  min-width: 250px;
+  max-width: 400px;
 }
 
 .right-panel {
   flex: 2;
   background-color: #2F3645;
   border-radius: 10px;
-  padding: 16px;
+  padding: 8px;
   overflow-y: auto;
 }
 
