--- a/src/components/FileView/FileView.css
+++ b/src/components/FileView/FileView.css
@@ -7,9 +7,9 @@
 
 .working-directory {
   display: flex;
+  padding: 8px 16px;
   flex-direction: column;
   gap: 16px;
-  padding: 16px;
   background-color: #2F3645;
   border-radius: 10px;
   flex-shrink: 0;
