--- a/src/components/FileView/FileView.module.css
+++ b/src/components/FileView/FileView.module.css
@@ -1,11 +1,11 @@
-.file-view {
+.fileView {
   display: flex;
   flex-direction: column;
   height: 100%;
   color: #FFFFFF;
 }
 
-.working-directory {
+.workingDirectory {
   display: flex;
   padding: 8px 16px;
   flex-direction: column;
